--- a/package.json
+++ b/package.json
@@ -7,9 +7,27 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
+    "date-fns": "^2.6.0",
+    "firebase": "^7.2.0",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
+    "sass-loader": "^8.0.0",
+    "slugify": "^1.3.5",
+    "sweetalert2": "^8.18.6",
+    "uninstall": "0.0.0",
     "vue": "^2.6.10",
+    "vue-chat-scroll": "^1.3.6",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
+    "vue-slider-component": "^3.0.42",
+    "vue2-datepicker": "^3.3.0",
+    "vue2-editor": "^2.10.2",
+    "vuejs-smart-table": "0.0.5",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
